# sagrag

./: .gitignore  README.md  ablation_results.jsonl  backend.Dockerfile  pyproject.toml  sag_rag_readme.md  ui.Dockerfile
.github/workflows/: ci.yml
app/: __init__.py  agents.py  api.py  config.py  continuous_learning.py  domain_packs.py  graph.py  ingest_jobs.py  ingestion.py  judge.py  llm_client.py  main.py  metrics.py  otel.py  redis_client.py  requirements.txt  reranker.py  security.py  speculative.py  store.py  synthesis.py  ui.py  utils.py
data/domain_packs/: stoicism.json
data/eval/: README.md  queries.jsonl
docs/: architecture.md
infra/: docker-compose.yml  otel-collector.yaml  prometheus.yml
infra/grafana/dashboards/: sag_rag.json
infra/grafana/provisioning/dashboards/: dashboards.yml
infra/grafana/provisioning/datasources/: datasource.yml
infra/helm/sag-rag/: Chart.yaml  README.md  values-prod.yaml  values.yaml
infra/helm/sag-rag/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  secret-gemini.yaml  service.yaml
infra/k8s/: README.md  backend.yaml  secret-gemini.yaml
infra/learning/: README.md  cron.yaml  pipeline.sh  pvc.yaml  train-job.yaml
infra/observability/: README.md  alert_rules.yml  docker-compose.yml  grafana-dashboard.json  otel-collector-config.yaml  prometheus.yml
infra/observability/grafana/provisioning/dashboards/: dashboards.yml
scripts/: curate_dataset.py  e2e.sh  eval_harness.py  eval_stub.py  export_training_data.py  export_training_data.sh  split_dataset.py  train_stub.py  view_audit.py  view_feedback.py
tests/: conftest.py  test_agents_policy.py  test_api.py  test_api_helpers.py  test_auth.py  test_domain_packs.py  test_eval_metrics.py  test_ingest_lifecycle.py  test_ingestion.py  test_judge.py  test_llm_boundaries.py  test_metrics.py  test_redis_client.py  test_streaming.py  test_synthesis_helpers.py
tools/: ablation_eval.py  eval_metrics.py
ui/: gradio_app.py  requirements.txt
